Add devcontainer settings

--- a/system_f_omega.opam
+++ b/system_f_omega.opam
@@ -7,6 +7,9 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
+  "ocaml"
+  "ocaml-lsp-server"
+  "ocamlformat"
   "dune"
   "base"
   "stdio"
